--- a/css/style.css
+++ b/css/style.css
@@ -664,6 +664,9 @@ body {
 	margin-bottom: 2.5em;
 	list-style: none;
 }
+.filters label {
+	cursor: pointer;
+}
 .manufacturer li{
 	padding: 0;
 }
