--- a/css/style.css
+++ b/css/style.css
@@ -305,7 +305,7 @@ body {
 	margin-top: 2px;
 	margin-bottom: 27px;
 }
-.index-section .btn {
+.btn {
 	display:inline-block;
 	width: 140px;
 	margin-top: 5px;
@@ -760,4 +760,71 @@ body {
 .group li {
 	padding-left: 35px;
 }
+.items-contaner {
+	float: right;
+	width: 720px;
+}
+.item {
+	position: relative;
+	display: inline-block;
+	float: left;
+	margin-right: 20px;
+	margin-bottom: 17px;
+	width: 220px;
+	box-shadow: 0 0 5px 0 #cacaca;
+	background: white;
+	padding-bottom: 10px;
 
+}
+.item .info a{
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 55px;
+	height: 55px;
+	background: url('/img/info.png') no-repeat;
+}
+.item p {
+	margin: 6px 15px;
+	padding: 0;
+	line-height: 1.3em;
+}
+.item img {
+	margin: 0;
+}
+.cost {
+	margin: 11px 15px;
+	background: #e5e5e5;
+}
+.items-contaner	.btn{
+	width: auto;
+	margin: 0;
+	padding: 13px 20px;
+	font-family: "PT Sans Narrow", sans-serif;
+	font-size: 1em;
+	cursor: pointer;
+}
+.item .btn {
+	float: right;
+}
+.cost span {
+	float: left;
+	display: inline-block;
+	width: 107px;
+	margin-top: 0.8em;
+	text-align: center;
+}
+.navigation ul {
+	padding: 0;
+	margin: 0;
+	margin-top: 30px;
+	list-style: none;
+}
+.navigation li {
+	display: inline-block;
+	margin-right: 5px;
+}
+.navigation .active {
+	color: black;
+	background: white;
+}
